Fix for Bug 970019 - gutter-right overflow:hidden causes long text to be clipped "Create a Quickstar" - reduce padding-right and offset margin-right by same value - also moved styles to be centrally located in _core

--- a/site/app/assets/stylesheets/site/_community.scss
+++ b/site/app/assets/stylesheets/site/_community.scss
@@ -1,16 +1,3 @@
-.community .column-nav .gutter-right {
-  padding-top: 28px;
-}
-@media (max-width: 767px) {
-  .community {
-    .column-nav {
-      .gutter-right {
-        padding-top: 15px;
-      }
-    }
-  }
-} 
-
 .inline { display: inline; }
  
 /* Drupal specific markup, we may want to wrap this with a top level selector on body.drupal or something */
